Update Config “general”

--- a/config.json
+++ b/config.json
@@ -1,13 +1,23 @@
 {
-  "base_url": "https://wutali-nextjs-netlify-blog.netlify.app",
+  "base_url": "www.thinkingaviation.com",
   "site_title": "Thinking Aviation",
   "site_description": "Flight instructors writing about aviation",
   "site_keywords": [
-    {"keyword": "Flight Instruction"},
-    {"keyword": "Private Pilot"},
-    {"keyword": "Commercial Pilot"},
-    {"keyword": "Aviation knowledge"},
-    {"keyword": "Instrument Rating"}
+    {
+      "keyword": "Flight Instruction"
+    },
+    {
+      "keyword": "Private Pilot"
+    },
+    {
+      "keyword": "Commercial Pilot"
+    },
+    {
+      "keyword": "Aviation knowledge"
+    },
+    {
+      "keyword": "Instrument Rating"
+    }
   ],
   "posts_per_page": 5,
   "twitter_account": "none",
